# cuddlyFS

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.datanode  Dockerfile.namenode  README.md  build.rs  compose.yaml
.github/workflows/: rust.yml
config/: default.yaml  docker.yaml
proto/: auth.proto  client_to_datanode.proto  common.proto  data_transfer.proto  datanode.proto  datanode_to_datanode.proto  directory.proto  file.proto  heartbeat.proto  namenode.proto  node.proto
src/: block.rs  chunk.rs  config.rs  lib.rs  message.rs  p2p.rs  transport.rs
src/datanode/: datanode_client_service.rs  datanode_data_handler.rs  datanode_data_registry.rs  datanode_datanode_service.rs  datanode_disk_info.rs  mod.rs
src/fs_client/: mod.rs
src/io/: cuddly_reader.rs  cuddly_writer.rs  mod.rs
src/namenode/: block_id_to_datanode_map.rs  datanode_info.rs  mod.rs  namenode_data_registry.rs  namenode_directory_service.rs  namenode_file_service.rs  namenode_heartbeat_service.rs  namenode_node_service.rs  namenode_operation_logger.rs  namenode_progress_tracker.rs  namenode_state.rs
src/p2p/: tcp_transport.rs
src/utils/: errors.rs  key_to_data_and_id_map.rs  mod.rs
trash/src/: chunk.rs  filesystem.rs  metadata.rs  node.rs
trash/src/p2p/: handshake.rs  tcp_transport.rs
