[package]
name = "cuddlyfs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.1"
chrono = "0.4.38"
env_logger = "0.11.5"
local-ip-address = "0.6.3"
log = "0.4.22"
md5 = "0.7.0"
prost = "0.13.2"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tonic = "0.12.2"

[build-dependencies]
tonic-build = "0.12.2"
