[package]
name = "cuddlyfs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.2"
chrono = "0.4.38"
config = "0.14.0"
env_logger = "0.11.5"
hostname = "0.4.0"
lazy_static = "1.5.0"
local-ip-address = "0.6.3"
log = "0.4.22"
md5 = "0.7.0"
prost = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tokio-util = "0.7.12"
tonic = "0.12.3"
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.3"
